feat: Add Git repository status management and credential management features
- Implemented GitRepositoryStatusService to handle repository status retrieval and updates.
- Created GitCredentialDto and related request DTOs for managing Git credentials.
- Added CredentialManagement component for creating, updating, and deleting Git credentials.
- Introduced RepositoryStatus component to display the status of a specific Git repository.
- Updated App routing to include Git credentials and repository status pages.
- Enhanced Navbar to include links for Git credentials management.
- Added translations for new features in English and Chinese.
- Created GitCredentialsPage and RepositoryStatusPage components for respective functionalities.
- Developed git-credential.service.ts for API interactions related to Git credentials.
- Updated git.service.ts to include methods for fetching repository status.

--- a/aireviewer-frontend/src/i18n/locales/en.json
+++ b/aireviewer-frontend/src/i18n/locales/en.json
@@ -295,6 +295,8 @@
       "title": "Project Overview",
       "description": "Description",
       "repository": "Repository",
+      "repository_status": "Repository Status",
+      "view_repository_status": "View repository status",
       "language": "Language",
       "created": "Created",
       "members": "Members",
